@@ -65,6 +65,12 @@ CVS code -
 	  this is disabled when NANO_SMALL is defined.  New functions
 	  do_word_count() and do_next_word_void(); changes to
 	  shortcut_init() and do_next_word(). (DLR)
+	- Detect words more accurately by taking punctuation into
+	  account, and convert all word-detecting functions to use the
+	  same wrapper function for ease of maintenance.  New functions
+	  is_punct_mbchar() and is_word_mbchar(); changes to
+	  do_next_word(), do_prev_word(), is_whole_word(),
+	  do_statusbar_next_word(), and do_statusbar_prev_word(). (DLR)
 - chars.c:
   make_mbstring()
 	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
@@ -233,6 +239,7 @@ CVS code -
 	  Weinehall)
 	- Don't refer to the built-in file browser as crappy anymore.
 	  (DLR)
+	- Check for iswpunct(). (DLR)
 - doc/faq.html:
 	- Update the question about the FAQ to mention the current
 	  maintainer. (DLR)
